fixed the flex container on UX, but need to unsquish the banner

--- a/src/components/pages/ux/UX.scss
+++ b/src/components/pages/ux/UX.scss
@@ -1,12 +1,20 @@
 #ux-section {
+    height: 100vh;
+    display:flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content:space-between;
     
+    @media only screen and (min-device-width: 1025px) {
+        /* padding: 5rem; */
+        /* display: grid;
+        grid-template-rows: 20% 60% 20%; */
+        
+    }
+
 
     #casestudies {
-        /* height: 100vh; */
-       /*  display: flex;
-        align-items: center;
-        justify-content: center; */
-
+       
         .casestudies-wrapper {
             /* height: 500px; */
             
